--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,7 +2,7 @@
     Benvenuto {{userService.user.username}}
 </div>
 
-<!-- 
+
 <app-tab-container>
     
-</app-tab-container> -->
+</app-tab-container>
